--- a/_posts/2024-05-13-jmap和jcmd在渗透中的利用方式.md
+++ b/_posts/2024-05-13-jmap和jcmd在渗透中的利用方式.md
@@ -57,6 +57,8 @@ jmap -dump:file=./heapdump [pid]
 
 因为这个例子使用了高版本的`Shiro`，所以也会泄露出`Shiro`的`Key`和加密模式，所以当渗透时候如果服务器存在多个`Java`项目我们通过其他口子获取到`Shell`且恰好还有个高版本`Shiro`的服务，可通过这样的方式拿到`Key`，作为权限维持的另一个“口子“。
 
+
+
 ### 2、利用jcmd获取Java进程信息
 
 - **列出 Java 进程**：
@@ -80,4 +82,13 @@ jmap -dump:file=./heapdump [pid]
     通过`jcmd`生成的`heapdump`相对小点，但是不影响泄露出`Shiro`的`Key`和其他信息。
 
     ![image-20240513213049026](assets/image-20240513213049026.png)
+    
+    
 
+## 三、补充
+
+1. `jps`，同样可以拿到进程pid
+
+   ![image-20240909152626772](assets/image-20240909152626772.png)
+
+   
